# insight

./: .dockerignore  .gitignore  LICENSE  Pipfile  README.md  config.env  docker-compose.yaml
common/: pyproject.toml
common/common/: config.py
common/common/api/: health.py  security.py  security_apikey.py  security_jwt.py
common/common/core/: __init__.py  logger_console.py  logger_elastic.py  logger_fmt.py  logger_utils.py  middleware.py
common/common/models/: api.py  api_kronos.py  api_maestro.py  api_ragnarok.py  base.py  defaults.py  elastic.py  enums.py  fsm.py  knowledge_base.py  project.py  session.py  turn.py  validation.py
common/common/services/: elastic.py  mongo.py  openai.py
common/common/utils/: api.py  exceptions.py  misc.py  prompts.py  singleton.py  swagger.py
fsm/: default_cs.json  default_en.json  mf-ai.json  tst.json
kronos/: Dockerfile  Pipfile  run.py  start.sh
kronos/kronos/: __init__.py  prestart.py
kronos/kronos/api/: default.py  deprecated.py  knowledge_base.py  nlp.py  projects.py  resources.py  router.py  sessions.py  turns.py
kronos/kronos/services/: crawler.py  ragnarok.py
maestro/: Dockerfile  Pipfile  run.py  start.sh
maestro/maestro/: __init__.py
maestro/maestro/api/: analytics.py  default.py  dialogue.py  nlp.py  (+3 more)
ragnarok/: Dockerfile  Pipfile  run.py  start.sh
ragnarok/ragnarok/: __init__.py  rag.py  vector_db.py
scripts/: deployment-full.sh  find_orphaned_resources.py  migrate_es_index.py
scripts/marker_pdf/: README.md  md2chunks.py  pdf2md.py  requirements.txt  time_estimation.py  upload_to_kronos.py
(+42 files in other folders)
